# nes-demo-process-intelligence

./: .gitignore  Dockerfile.source  docker-compose.yaml  kafka-consume.sh  kafka-init-topic.sh  kafka-produce.sh  query.yaml  source.py
_local/: query_file.sql
auto-model/: README.MD  infer_onnx.py  pipe_staple_pca.onnx  train_pca_onnx.py
auto-model/pipe_staple/: defects_config.json  readme.md
datagen/: CMakeLists.txt  README.md  config.image_test.yaml  config.yaml  configLoader.cpp  configLoader.hpp  datagen_batch_new.cpp
datagen/Util/: Yaml.cpp  Yaml.h
datagen/asan-build/: CMakeCache.txt  Makefile  cmake_install.cmake  datagen
datagen/docker/: Dockerfile  README.md  compose.yaml  config.mqtt.yaml  config.yaml  entrypoint.sh  output.csv
datagen/include/mosquitto-2.0.21/lib/: libmosquitto.so.1
datagen/include/mosquitto-2.0.21/lib/cpp/: libmosquittopp.so.1
datagen/include/mosquitto-2.0.21/man/: libmosquitto.3  mosquitto-tls.7  mosquitto.8  mosquitto.conf.5  mosquitto_ctrl.1  mosquitto_ctrl_dynsec.1  mosquitto_passwd.1  mosquitto_pub.1  mosquitto_rr.1  mosquitto_sub.1  mqtt.7
model/: readme.txt  tcp_csv_onnx_infer_raw_output.py
nes-common/include/: ExceptionDefinitions.inc
nes-logical-operators/include/Functions/: AutoViPreprocessImageLogicalFunction.hpp
nes-logical-operators/src/Functions/: AutoViPreprocessImageLogicalFunction.cpp  CMakeLists.txt
nes-physical-operators/: CMakeLists.txt
nes-physical-operators/include/Functions/: AutoViPreprocessImagePhysicalFunction.hpp
nes-physical-operators/src/Functions/: AutoViPreprocessImagePhysicalFunction.cpp  CMakeLists.txt
nes-plugins/: CMakeLists.txt
nes-plugins/Sinks/KafkaSink/: CMakeLists.txt  KafkaSink.cpp  KafkaSink.hpp
nes-systests/inference/: InferModelAutoModelFromBase64OriginalImageInline.test  InferModelAutoModelFromBase64PreprocessedImage.test  InferModelAutoModelFromBase64PreprocessedImageInline.test  InferModelAutoModelFromBase64RawTensor.test  InferModelFromBase64RawTensor.test
nes-systests/testdata/small/: auto-model-pipe-staple-good-0000-64x64-png.base64
vcpkg/: vcpkg.json
