# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#    https://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_source_files(nes-physical-operators
        FunctionProvider.cpp
        FieldAccessPhysicalFunction.cpp
        ConstantValueVariableSizePhysicalFunction.cpp
        CastFieldPhysicalFunction.cpp
        )

add_plugin(Concat PhysicalFunction nes-physical-operators ConcatPhysicalFunction.cpp)
add_plugin(AUTOVI_PREPROCESS_IMAGE PhysicalFunction nes-physical-operators AutoViPreprocessImagePhysicalFunction.cpp)
add_plugin(FROM_BASE64 PhysicalFunction nes-physical-operators FromBase64PhysicalFunction.cpp)
add_plugin(TO_BASE64 PhysicalFunction nes-physical-operators ToBase64PhysicalFunction.cpp)
add_plugin(Cast PhysicalFunction nes-physical-operators CastFieldPhysicalFunction.cpp)
add_plugin(CastToUnixTs PhysicalFunction nes-physical-operators CastToUnixTimestampPhysicalFunction.cpp)
add_plugin(CastFromUnixTs PhysicalFunction nes-physical-operators CastFromUnixTimestampPhysicalFunction.cpp)

add_subdirectory(ArithmeticalFunctions)
add_subdirectory(ComparisonFunctions)
add_subdirectory(BooleanFunctions)
